Main page / Load preset dropdown: - when selecting "None", pivot and cutoff points are cleared - when changing pivot/cutoff settings, the "Load preset" dropdown will no longer switch back to "(none)". Instead, it will change to italic to indicate that the currently selected preset has unsaved changes.

--- a/assets/branch_export.css
+++ b/assets/branch_export.css
@@ -104,6 +104,11 @@ and open the template in the editor.
     color: red;
 }
 
+#saved_branch_presets.changed
+{
+    font-style:  italic;
+}
+
 /*Config*/
 
 #presets 
